<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    tools:context=".activities.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <io.github.florent37.shapeofview.shapes.DiagonalView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:elevation="4dp"
            app:shape_diagonal_angle="10"
            app:shape_diagonal_position="bottom">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/orange">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/send_e_cart"
                    android:textColor="@color/white"
                    android:textSize="23sp" />
            </RelativeLayout>

        </io.github.florent37.shapeofview.shapes.DiagonalView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/search"
            android:textColor="@color/orange"
            android:textSize="23sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="10dp"
            app:strokeColor="@color/orange"
            app:strokeWidth="1dp">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:padding="8dp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:elevation="0dp"
            android:enabled="false"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_baseline_search_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shops_restaurants_items_etc"
                android:inputType="text"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:drawablePadding="8dp"
            android:text="@string/scan_ecart_qr_code"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_baseline_qr_code_24" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_menu_book_24"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:maxWidth="300dp"
            android:text="@string/whatever_you_do_work_heartly_as_for_the_lord_and_not_for_men"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colossians_3_23"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/txt_sign_in"
            android:text="@string/sign_un_as_seller"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>